--- a/deprecated/src/app/formulario/form.component.html
+++ b/deprecated/src/app/formulario/form.component.html
@@ -1,8 +1,9 @@
+<form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
 <div class="form-group">
   <div class="form-element">
     <mat-form-field class="form-full-width" appearance="fill">
       <mat-label>Seleccionar Programa o Capacitación</mat-label>
-      <mat-select required>
+      <mat-select required [(ngModel)]="selectedPrograma" name="selectedPrograma">
         <mat-option>--</mat-option>
         <mat-option *ngFor="let prog of programas" [value]="prog">
           {{prog}}</mat-option>
@@ -13,24 +14,25 @@
   <div class="form-element">
     <mat-form-field class="form-full-width" appearance="fill">
       <mat-label>Email</mat-label>
-      <input type="email" matInput
-             placeholder="Ejemplo: pat@example.com">
-      <mat-hint>Errors appear instantly!</mat-hint>
-      <!-- <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+      <input type="email" matInput id="email" name="email"
+             placeholder="Ejemplo: pat@example.com" [(ngModel)]="userEmail" #email="ngModel">
+      <!-- <mat-hint>Errors appear instantly!</mat-hint> -->
+      <!-- <div *ngIf="emailFormControl.errors?.email">
         Please enter a valid email address
-      </mat-error>
-      <mat-error *ngIf="emailFormControl.hasError('required')">
+      </div> -->
+      <!-- <mat-error *ngIf="emailFormControl.hasError('required')">
         Email is <strong>required</strong>
       </mat-error> -->
     </mat-form-field>
   </div>
 
 
+
   <div class="form-element">
     <mat-form-field class="form-full-width" appearance="fill">
       <mat-label>Documento</mat-label>
-      <input type="dni" matInput
-             placeholder="Ejemplo: 34689995">
+      <input type="userDni" matInput name="userDni" id="userDni"
+             placeholder="Ejemplo: 34689995" [(ngModel)]="userDni">
       <mat-hint>Errors appear instantly!</mat-hint>
       <!-- <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
         Please enter a valid email address
@@ -71,5 +73,8 @@
     </mat-form-field>
   </div>
 
+  <button type="submit">Send</button>
+
 
 </div>    
+</form>
